Revert "2404: Change position of tooltip bubble to prevent cutting off of text in the bubble. (#2594)" (#2630)
This reverts commit f5fe8e57bcbd3687f0e223794bc01e923ea3e4d7.
We missed to look at the changes in responsive design mode which has some errors, so reverting.

--- a/_sass/components/_wins-page.scss
+++ b/_sass/components/_wins-page.scss
@@ -92,7 +92,6 @@
     color: $color-white;
     font-family: arial;
     position: absolute;
-    bottom: 50px;
     z-index: 1;
 }
 [data-wins]{
@@ -105,10 +104,10 @@
     position: absolute;
     border-left: 10px solid $color-black;
     border-right: 10px solid transparent;
-    transform: rotate(225deg);
+    transform: rotate(45deg);
     border-bottom: 10px solid transparent;
-    right: 47%;
-    bottom: 0;
+    right: 40%;
+    top: 0;
 }
 
 .wins-badge-icon {
